--- a/index.html
+++ b/index.html
@@ -63,12 +63,6 @@
                             <a href="#" class="navbar__mbtl-link">Pricing</a>
                         </li>
                     </ul>
-
-
-
-
-
-
                 </div>
                 <div class="col xl-3 md-0 sm-0">
                     <div class="log">
@@ -79,7 +73,7 @@
             </div>
             <!-- Heading content -->
             <div class="row">
-                <div class="col xl-10">
+                <div class="col xl-10 book__wrap">
                     <div class="heading__content-wrap">
                         <h1 class="heading__content-header">
                             Start your unforgettable 
@@ -90,7 +84,41 @@
                         </p>
                     </div>
                     <div class="heading__booking-wrap">
-                        
+                        <div class="row">
+                            <div class="col xl-2-4 md-6">
+                                <div class="booking__content">
+                                    <p class="booking__content-head">Destination</p>
+                                    <input type="text" placeholder="Hai Duong">
+                                </div>
+                            </div>
+                            <div class="col xl-2-4 md-6">
+                                <div class="booking__content">
+                                    <p class="booking__content-head">Person</p>
+                                    <input type="number" placeholder="2">
+                                </div>
+                            </div>
+                            <div class="col xl-2-4 md-6">
+                                <div class="booking__content">
+                                    <p class="booking__content-head">Checkin</p>
+                                    <input type="datetime" placeholder="">
+                                </div>
+                            </div>
+                            <div class="col xl-2-4 md-6">
+                                <div class="booking__content">
+                                    <p class="booking__content-head">Checkout</p>
+                                    <input type="datetime" placeholder="">
+                                </div>
+                            </div>
+                            <div class="col xl-2-4 md-4 submit-book-wrap">
+                                <div class="submit-book">
+                                    <p class="book-submit-content">
+                                        <span>Book</span>
+                                        <span>Now</span>
+                                    </p>
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col xl-2"></div>
