--- a/index.html
+++ b/index.html
@@ -126,6 +126,91 @@
             </div>
         </div>
     </div>
+    <div class="popular_destinations">
+        <div class="grid wide">
+            <div class="row">
+                <div class="col xl-10 md-12 sm-12 destination__wrap">
+                    <h1 class="destination__title">Popular Destinations</h1>
+                    <hr color="#FF7757" width="200px" size="4px">
+                    <p class="destination__content">
+                        Most popular destinations around the world, from historical places to natural wonders.
+                    </p>
+                </div>
+                <div class="col xl-2 behavior__page-wrap hide-on-tablet-mobile">
+                    <div class="previous__page behavior__page">
+                        <i class="fa-solid fa-angle-left"></i>
+                    </div>
+                    <div class="next__page behavior__page">
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+                </div> 
+            </div>
+            <div class="row destinations__card-wrap">
+                <div class="col xl-4 md-12 sm-12">
+                    <div class="destinations__card" style="background-image: url(assets/img/thac-ban-gioc2.jpg);">
+                            <p class="destinations__card-name">Thác Bản Giốc</p>
+                            <p class="destinations__card-location">
+                                <i class="fa-solid fa-location-dot"></i>
+                                Cao Bằng, Việt Nam
+                            </p>
+                    </div>
+                </div>
+                <div class="col xl-4 md-12 sm-12">
+                    <div class="destinations__card" style="background-image: url(assets/img/thac-ban-gioc2.jpg);">
+                            <p class="destinations__card-name">Thác Bản Giốc</p>
+                            <p class="destinations__card-location">
+                                <i class="fa-solid fa-location-dot"></i>
+                                Cao Bằng, Việt Nam
+                            </p>
+                    </div>
+                </div>
+                <div class="col xl-4 md-12 sm-12">
+                    <div class="destinations__card" style="background-image: url(assets/img/thac-ban-gioc2.jpg);">
+                            <p class="destinations__card-name">Thác Bản Giốc</p>
+                            <p class="destinations__card-location">
+                                <i class="fa-solid fa-location-dot"></i>
+                                Cao Bằng, Việt Nam
+                            </p>
+                    </div>
+                </div>
+                <div class="col xl-4 md-12 sm-12">
+                    <div class="destinations__card" style="background-image: url(assets/img/thac-ban-gioc2.jpg);">
+                            <p class="destinations__card-name">Thác Bản Giốc</p>
+                            <p class="destinations__card-location">
+                                <i class="fa-solid fa-location-dot"></i>
+                                Cao Bằng, Việt Nam
+                            </p>
+                    </div>
+                </div>
+                <div class="col xl-4 md-12 sm-12">
+                    <div class="destinations__card" style="background-image: url(assets/img/thac-ban-gioc2.jpg);">
+                            <p class="destinations__card-name">Thác Bản Giốc</p>
+                            <p class="destinations__card-location">
+                                <i class="fa-solid fa-location-dot"></i>
+                                Cao Bằng, Việt Nam
+                            </p>
+                    </div>
+                </div>
+                <div class="col xl-4 md-12 sm-12">
+                    <div class="destinations__card" style="background-image: url(assets/img/thac-ban-gioc2.jpg);">
+                            <p class="destinations__card-name">Thác Bản Giốc</p>
+                            <p class="destinations__card-location">
+                                <i class="fa-solid fa-location-dot"></i>
+                                Cao Bằng, Việt Nam
+                            </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row behavior__page-mbtl show-on-tablet-mobile">
+                <div class="previous__page behavior__page">
+                    <i class="fa-solid fa-angle-left"></i>
+                </div>
+                <div class="next__page behavior__page">
+                    <i class="fa-solid fa-angle-right"></i>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="assets/javascript/main.js"></script>
 </body>
 </html>
