--- a/index.html
+++ b/index.html
@@ -156,47 +156,47 @@
                     </div>
                 </div>
                 <div class="col xl-4 md-12 sm-12">
-                    <div class="destinations__card" style="background-image: url(assets/img/thac-ban-gioc2.jpg);">
-                            <p class="destinations__card-name">Thác Bản Giốc</p>
+                    <div class="destinations__card" style="background-image: url(assets/img/Vietnam-4K-Wallpapers.jpg);">
+                            <p class="destinations__card-name">Vịnh Hạ Long</p>
                             <p class="destinations__card-location">
                                 <i class="fa-solid fa-location-dot"></i>
-                                Cao Bằng, Việt Nam
+                                Quảng Ninh, Việt Nam
                             </p>
                     </div>
                 </div>
                 <div class="col xl-4 md-12 sm-12">
-                    <div class="destinations__card" style="background-image: url(assets/img/thac-ban-gioc2.jpg);">
-                            <p class="destinations__card-name">Thác Bản Giốc</p>
+                    <div class="destinations__card" style="background-image: url(assets/img/hinh-nen-may-tinh-4k-10.jpg);">
+                            <p class="destinations__card-name">Hòn Khô</p>
                             <p class="destinations__card-location">
                                 <i class="fa-solid fa-location-dot"></i>
-                                Cao Bằng, Việt Nam
+                                Quy Nhơn, Việt Nam
                             </p>
                     </div>
                 </div>
                 <div class="col xl-4 md-12 sm-12">
-                    <div class="destinations__card" style="background-image: url(assets/img/thac-ban-gioc2.jpg);">
-                            <p class="destinations__card-name">Thác Bản Giốc</p>
+                    <div class="destinations__card" style="background-image: url(assets/img/hinh-nen-viet-nam-4k-cho-dien-thoai-1-inkythuatso-08-14-10-45.jpg);">
+                            <p class="destinations__card-name">Ruộng bậc thang</p>
                             <p class="destinations__card-location">
                                 <i class="fa-solid fa-location-dot"></i>
-                                Cao Bằng, Việt Nam
+                                Sa Pa, Lào Cai, Việt Nam
                             </p>
                     </div>
                 </div>
                 <div class="col xl-4 md-12 sm-12">
-                    <div class="destinations__card" style="background-image: url(assets/img/thac-ban-gioc2.jpg);">
-                            <p class="destinations__card-name">Thác Bản Giốc</p>
+                    <div class="destinations__card" style="background-image: url(assets/img/Hinh-nen-Ha-Noi-ve-dem-ben-Ho-Guom.jpg);">
+                            <p class="destinations__card-name">Hồ Gươm</p>
                             <p class="destinations__card-location">
                                 <i class="fa-solid fa-location-dot"></i>
-                                Cao Bằng, Việt Nam
+                                Hà Nội, Việt Nam
                             </p>
                     </div>
                 </div>
                 <div class="col xl-4 md-12 sm-12">
-                    <div class="destinations__card" style="background-image: url(assets/img/thac-ban-gioc2.jpg);">
-                            <p class="destinations__card-name">Thác Bản Giốc</p>
+                    <div class="destinations__card" style="background-image: url(assets/img/ta-xua.jpg);">
+                            <p class="destinations__card-name">Tà Xùa</p>
                             <p class="destinations__card-location">
                                 <i class="fa-solid fa-location-dot"></i>
-                                Cao Bằng, Việt Nam
+                                Sơn La, Việt Nam
                             </p>
                     </div>
                 </div>
@@ -207,6 +207,199 @@
                 </div>
                 <div class="next__page behavior__page">
                     <i class="fa-solid fa-angle-right"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="special__offer">
+        <div class="grid wide">
+            <div class="row special__offer-title-wrap">
+                <div class="col xl-4 behavior__page-wrap hide-on-tablet-mobile">
+                    <div class="previous__page behavior__page">
+                        <i class="fa-solid fa-angle-left"></i>
+                    </div>
+                    <div class="next__page behavior__page">
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+                </div>
+                <div class="col xl-8">
+                    <div class="special__offer-heading-wrap">
+                        <h1 class="special__offer-heading-title">Special Offer</h1>
+                        <hr width="150px" color="#FF7757">
+                        <p class="special__offer-heading-content">Checkout our special offer and discounts</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row special__offer-content-wrap">
+                <div class="col xl-4 md-12 sm-12">
+                    <div class="cart__destination-buy">
+                        <div class="cart__destination-buy-img" style="background-image: url(assets/img/hinh-nen-viet-nam-4k-cho-dien-thoai-1-inkythuatso-08-14-10-45.jpg);"></div>
+                        <h4 class="cart__destination-buy-title">Ruộng Bậc Thang</h4>
+                        <ul class="cart__destination-buy-rate-list">
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                        </ul>
+                        <p class="cart__destination-buy-detail">
+                            5 nights and 4 days in 5 star hotel, breakfast and lunch included. 
+                            Very popular during the renaissance. Passage and going through the 
+                            cites of the world in classical literature.
+                        </p>
+                        <div class="cart__destination-buy-price">
+                            <span>€500</span>
+                            <div class="cart__destination-buy-btn">
+                                <p>Detail</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col xl-4 md-12 sm-12">
+                    <div class="cart__destination-buy">
+                        <div class="cart__destination-buy-img" style="background-image: url(assets/img/Hinh-nen-Ha-Noi-ve-dem-ben-Ho-Guom.jpg);"></div>
+                        <h4 class="cart__destination-buy-title">Hồ Gươm, Hà Nội</h4>
+                        <ul class="cart__destination-buy-rate-list">
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                        </ul>
+                        <p class="cart__destination-buy-detail">
+                            5 nights and 4 days in 5 star hotel, breakfast and lunch included. 
+                            Very popular during the renaissance. Passage and going through the 
+                            cites of the world in classical literature.
+                        </p>
+                        <div class="cart__destination-buy-price">
+                            <span>€500</span>
+                            <div class="cart__destination-buy-btn">
+                                <p>Detail</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col xl-4 md-12 sm-12">
+                    <div class="cart__destination-buy">
+                        <div class="cart__destination-buy-img" style="background-image: url(assets/img/canh-dep-viet-nam-12.jpg);"></div>
+                        <h4 class="cart__destination-buy-title">Đà Lạt</h4>
+                        <ul class="cart__destination-buy-rate-list">
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                        </ul>
+                        <p class="cart__destination-buy-detail">
+                            5 nights and 4 days in 5 star hotel, breakfast and lunch included. 
+                            Very popular during the renaissance. Passage and going through the 
+                            cites of the world in classical literature.
+                        </p>
+                        <div class="cart__destination-buy-price">
+                            <span>€500</span>
+                            <div class="cart__destination-buy-btn">
+                                <p>Detail</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col xl-4 md-12 sm-12">
+                    <div class="cart__destination-buy">
+                        <div class="cart__destination-buy-img" style="background-image: url(assets/img/hinh-nen-may-tinh-4k-10.jpg);"></div>
+                        <h4 class="cart__destination-buy-title">Cầu Gỗ</h4>
+                        <ul class="cart__destination-buy-rate-list">
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                        </ul>
+                        <p class="cart__destination-buy-detail">
+                            5 nights and 4 days in 5 star hotel, breakfast and lunch included. 
+                            Very popular during the renaissance. Passage and going through the 
+                            cites of the world in classical literature.
+                        </p>
+                        <div class="cart__destination-buy-price">
+                            <span>€500</span>
+                            <div class="cart__destination-buy-btn">
+                                <p>Detail</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col xl-4 md-12 sm-12">
+                    <div class="cart__destination-buy">
+                        <div class="cart__destination-buy-img" style="background-image: url(assets/img/thac-ban-gioc2.jpg);"></div>
+                        <h4 class="cart__destination-buy-title">Bản Giốc</h4>
+                        <ul class="cart__destination-buy-rate-list">
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="cart__destination-buy-rate-item">
+                                <i class="fa-solid fa-star"></i>
+                            </li>
+                        </ul>
+                        <p class="cart__destination-buy-detail">
+                            5 nights and 4 days in 5 star hotel, breakfast and lunch included. 
+                            Very popular during the renaissance. Passage and going through the 
+                            cites of the world in classical literature.
+                        </p>
+                        <div class="cart__destination-buy-price">
+                            <span>€500</span>
+                            <div class="cart__destination-buy-btn">
+                                <p>Detail</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
