--- a/index.html
+++ b/index.html
@@ -446,7 +446,55 @@
             </div>
         </div>
     </div>
-
+    <div class="destination__gallery">
+        <div class="grid wide">
+            <div class="row ">
+                <div class="col xl-12 md-12 sm-12">
+                    <div class="gallery__heading">
+                        <h1 class="gallery__heading-title">Destination Galery</h1>
+                        <hr width="150px" color="#FF7757">
+                        <p class="gallery__heading-content">Our photos on trip</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row gallery__img-wrap">
+                <div class="col xl-3 md-6 sm-12 ">
+                    <div class="gallery__img" style="background-image: url(assets/img/guess.jpg);"></div>
+                </div>
+                <div class="col xl-3 md-6 sm-12">
+                    <div class="gallery__img" style="background-image: url(assets/img/guess1.jpg);"></div>
+                </div>
+                <div class="col xl-3 md-6 sm-12">
+                    <div class="gallery__img" style="background-image: url(assets/img/guess2.jpg);"></div>
+                </div>
+                <div class="col xl-3 md-6 sm-12">
+                    <div class="gallery__img" style="background-image: url(assets/img/guess3.jpg);"></div>
+                </div>
+                <div class="col xl-3 md-6 sm-12">
+                    <div class="gallery__img" style="background-image: url(assets/img/guess4.jpg);"></div>
+                </div>
+                <div class="col xl-3 md-6 sm-12">
+                    <div class="gallery__img" style="background-image: url(assets/img/guess5.jpg);"></div>
+                </div>
+                <div class="col xl-3 md-6 sm-12">
+                    <div class="gallery__img" style="background-image: url(assets/img/guess2.jpg);"></div>
+                </div>
+                <div class="col xl-3 md-6 sm-12">
+                    <div class="gallery__img" style="background-image: url(assets/img/guess3.jpg);"></div>
+                </div>
+                <div class="col xl-3 md-6 sm-12 ">
+                    <div class="gallery__img" style="background-image: url(assets/img/guess.jpg);"></div>
+                </div>
+                <div class="col xl-3 md-6 sm-12">
+                    <div class="gallery__img" style="background-image: url(assets/img/guess1.jpg);"></div>
+                </div>
+                <div class="col xl-3 md-6 sm-12">
+                    <div class="gallery__img" style="background-image: url(assets/img/guess2.jpg);"></div>
+                </div>
+                <div class="col xl-3 md-6 sm-12">
+            </div>
+        </div>
+    </div>
 
     <script src="assets/javascript/main.js"></script>
 </body>
