fix mobile menu navbar

--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
                     </div>
                     <ul class="navbar__mbtl-list">
                         <li class="navbar__mbtl-item">
-                            <a href="#" class="navbar__mbtl-link">Home</a>
+                            <a href="#home" class="navbar__mbtl-link">Home</a>
                         </li>
                         <li class="navbar__mbtl-item">
-                            <a href="#" class="navbar__mbtl-link">Explore</a>
+                            <a href="#explore" class="navbar__mbtl-link">Explore</a>
                         </li>
                         <li class="navbar__mbtl-item">
-                            <a href="#" class="navbar__mbtl-link">Travel</a>
+                            <a href="#travel" class="navbar__mbtl-link">Travel</a>
                         </li>
                         <li class="navbar__mbtl-item">
-                            <a href="#" class="navbar__mbtl-link">Blog</a>
+                            <a href="#blog" class="navbar__mbtl-link">Blog</a>
                         </li>
                         <li class="navbar__mbtl-item">
                             <a href="#" class="navbar__mbtl-link">Pricing</a>
